super experimental persistence for new search, not tested
